# runewars.newage

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
@dependencies/zlib-win-1.3.1/lib/: libz-static.lib
docs/: Backgrnd.txt  Chars.txt  Manual.rus  Manual.txt  Manual2.rus  ReadMe.txt  Refsheet.txt
engine/: README
src/: adventurepart.cpp  adventurepart.h  aiturn.cpp  battle.cpp  dialogs.cpp  gamedata.cpp  gamedata.h  gameobjects.cpp  gameobjects.h  gamesummarypart.cpp  gametheme.cpp  jsongui.cpp  jsongui.h  mahjongpart.cpp  mahjongsummarypart.cpp  mahjongsummarypart.h  runewars.cpp  selectperson.cpp  selectperson.h  settings.cpp  settings.h  showplayers.h  strings.cpp
src/game/: actions.h  aiturn.cpp  aiturn.h  battle.h  dialogs.h  gameobjects.cpp  gametheme.h  runewars.cpp  runewars.h  settings.h
src/screen/: adventurepart.cpp  adventurepart.h  battlesummarypart.cpp  battlesummarypart.h  gamesummarypart.h  jsongui.cpp  mahjongpart.cpp  mahjongpart.h  showplayers.cpp
themes/default/: bonus.json  config.json  index.json
themes/default/json/: README  dialog_avatarinfo.json  dialog_combat.json  dialog_creatureinfo.json  dialog_mapstatus.json  dialog_messagebox.json  dialog_runecast.json  dialog_showlog.json  dialog_spellinfo.json  dialog_targetplayer.json  screen_adventurepart.json  screen_battle_summary.json  screen_game_summary.json  screen_mahjong_summary.json  screen_mahjongpart.json  screen_selectperson.json  screen_showplayers.json
themes/default/json/gamedata/: abilities.json  avatars.json  clans.json  creatures.json  fonts.json  images.json  lands.json  musics.json  sounds.json  specials.json  spells.json  stones.json  winds.json
themes/default/lang/: Makefile  ru.po  runewars-na.pot
themes/default/original/: License.txt
themes/default/original/mid/: introfm.mid  introwt.mid  izfm.mid  izwt.mid  karthafm.mid  maithafm.mid  maithawt.mid  mapfm.mid  marzfm.mid  mjfm.mid  mjwt.mid  winfm.mid  winwt.mid
